# iqtcplib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindLibSndFile.cmake
include/: TcpInput.h  TcpOutput.h
src/: TcpInput.cpp  TcpOutput.cpp
